--- a/.verb.md
+++ b/.verb.md
@@ -4,14 +4,14 @@ Normalizes the given object with [base-cli-schema][] before calling the `.proces
 
 ```js
 var Base = require('base');
-var config = require('base-cli-process');
+var cli = require('base-cli-process');
 
 var app = new Base();
-app.use(config());
+app.use(cli());
 
 var pkg = require('./package');
 
-app.config.process(pkg, function(err) {
+app.cli.process(pkg, function(err) {
   if (err) throw err;
 });
 ```
